# molgroups

./: .gitignore  molgroups.py  pyproject.toml  setup.py
.github/workflows/: build-docs.yml  publish-pypi.yml
Diffraction/Python/Diffraction_fitting_fp/: molgroups.py
PlottingAndAnalysis/: mpa.ipynb
PlottingAndAnalysis/ssBLM/Old folder/: rs.py
Reflectometry/ssBLM/: Ryans Shareable Notebook.ipynb  molgroups.py  ssblm_test.ipynb  ssblm_tiox_both.py  tblm_tiox_both.py  tiox_dopc_both.py
Reflectometry/ssBLM/.ipynb_checkpoints/: Ryans Shareable Notebook-checkpoint.ipynb  ssblm_test-checkpoint.ipynb  ssblm_tiox_both-checkpoint.py
Reflectometry/ssBLM/Output/: ssblm_tiox_both-1-expt.json  ssblm_tiox_both-2-expt.json  ssblm_tiox_both-err.json  ssblm_tiox_both.err  ssblm_tiox_both.mon  ssblm_tiox_both.par  ssblm_tiox_both.py
Reflectometry/ssBLM/Output_ssBLM/: ssblm_tiox_both-1-expt.json  ssblm_tiox_both-2-expt.json  ssblm_tiox_both-err.json  ssblm_tiox_both.err  ssblm_tiox_both.mon  ssblm_tiox_both.par
Reflectometry/tBLM/: Ryans Shareable Notebook tBLM.ipynb  tblm_tiox_both.py  test_tblm.ipynb
Reflectometry/tBLM/.ipynb_checkpoints/: Ryans Shareable Notebook tBLM-checkpoint.ipynb  test_tblm-checkpoint.ipynb
Reflectometry/tBLM/Output/: tblm_tiox_both-1-expt.json  tblm_tiox_both-2-expt.json  tblm_tiox_both-err.json  tblm_tiox_both.err  tblm_tiox_both.mon  tblm_tiox_both.par
molgroups/: lipids.py  mol.py  pdbtools.py
molgroups/refl1d_interface/: __init__.py  experiment.py  functionalprofile.py  groups.py  layers.py  plots.py  sas.py
(+35 files in other folders)
