[project]
name = "molgroups"
version = "0.2.0"
description = "Molecular Modeling for Scattering Data Analysis"
authors = [
    { name = "Frank Heinrich", email = "mail@frank-heinrich.net" },
    { name = "David Hoogerheide", email = "david.hoogerheide@nist.gov" },
    { name = "Alyssa Thomas" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.9"
dependencies = [
    "periodictable",
    "scipy",
    "numpy",
    "matplotlib",
    "dill",
]
[project.optional-dependencies]
examples = ["sasdata", "pandas", "sasmodels"]
refl1d = ["refl1d"]

[project.urls]
repository = "https://github.com/reflectometry/molgroups"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["molgroups"]